@@ -35,6 +35,8 @@ import java.io.FileNotFoundException;
 import java.io.IOException;
 import java.io.InputStreamReader;
 import java.net.MalformedURLException;
+import java.net.URI;
+import java.net.URISyntaxException;
 import java.net.URL;
 import java.net.URLEncoder;
 import java.util.concurrent.BlockingQueue;
@@ -121,7 +123,7 @@ public class WorkerGeneratorURLFuzz implements Runnable {
 
             if (manager.getAuto()) {
                 try {
-                    URL headurl = new URL(firstPart);
+                    URL headurl = new URI(firstPart).toURL();
                     int responceCode =
                             manager.getHttpClient()
                                     .send(HttpMethod.HEAD, headurl.toString())
@@ -134,7 +136,7 @@ public class WorkerGeneratorURLFuzz implements Runnable {
                                 "Changing to GET only HEAD test returned 501(method no implmented) or a 400");
                         manager.setAuto(false);
                     }
-                } catch (MalformedURLException e) {
+                } catch (MalformedURLException | URISyntaxException e) {
                     LOGGER.debug("Malformed URL", e);
                 } catch (IOException e) {
                     LOGGER.debug(e);
@@ -168,7 +170,7 @@ public class WorkerGeneratorURLFuzz implements Runnable {
                     // url encode all the items
                     line = URLEncoder.encode(line, "UTF-8");
 
-                    URL currentURL = new URL(firstPart + urlFuzzStart + line + urlFuzzEnd);
+                    URL currentURL = new URI(firstPart + urlFuzzStart + line + urlFuzzEnd).toURL();
                     // BaseCase baseCaseObj = new BaseCase(currentURL, failcode, true, failurl,
                     // baseResponce);
                     // if the base case is null then we need to switch to content anylsis mode
@@ -179,7 +181,7 @@ public class WorkerGeneratorURLFuzz implements Runnable {
             }
         } catch (InterruptedException ex) {
             LOGGER.debug(ex.toString());
-        } catch (MalformedURLException ex) {
+        } catch (MalformedURLException | URISyntaxException ex) {
             LOGGER.warn("Failed to create the fuzzed URL:", ex);
         } catch (IOException ex) {
             LOGGER.warn("Failed to create the fuzzed URL:", ex);
